--- a/src/styles/views/_main-page.scss
+++ b/src/styles/views/_main-page.scss
@@ -170,6 +170,15 @@
 	border-radius: 5px;
 	font-size: 12px;
 }
+.cardinvalid {
+	background: #C9C9C9;
+	color: #7D7D7D;
+	text-align: center;
+	padding: 10px;
+	border-radius: 5px;
+	font-size: 12px;
+}
+
 
 .text-title {
 	color: #2e4a66;
